<resources>
    <string name="app_name">App</string>

    <string name="default_app_title">xkcd Comics</string>
    <string name="previous_page_button">Prev Page</string>
    <string name="next_page_button">Next Page</string>
    <string name="search_icon_alt">Search Icon</string>
    <string name="comics_loaded">Comics: 1 -> 10</string>
    <string name="search_placeholder_text">Search Comic by Number</string>

    <string name="default_comic_title">Comic Title</string>
    <string name="click_image_text">Click image for fullscreen</string>
    <string name="default_comic_date">01.01.2000</string>
    <string name="default_comic_number">Comic #320</string>
    <string name="default_comic_image_alt">XKCD comic-image</string>
    <string name="default_comic_transcript_text">Transcript Text</string>
    <string name="default_comic_transcript_title">Transcript: </string>
    <string name="default_comic_explanation">Explanation -></string>
    <string name="comic_item_read_more">Read More</string>
    <string name="globe_icon_alt">Globe icon</string>
</resources>