<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/comicItemNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_comic_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/comicItemDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_comic_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/comicItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_comic_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/comicItemImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comicItemNumber" />

        <TextView
            android:id="@+id/comicItemClickImageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_image_text"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/comicItemImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comicItemTitle" />

        <ImageView
            android:id="@+id/comicItemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comicItemClickImageText"
            app:srcCompat="@drawable/ic_placeholder"
            android:contentDescription="@string/default_comic_image_alt" />

        <TextView
            android:id="@+id/comicItemTranscriptTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/default_comic_transcript_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comicItemImage" />

        <TextView
            android:id="@+id/comicItemTranscript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/default_comic_transcript_text"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comicItemTranscriptTitle" />

        <TextView
            android:id="@+id/comicItemReadMoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comic_item_read_more"
            android:textColor="@color/purple"
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/comicItemTranscript"
            app:layout_constraintTop_toBottomOf="@id/comicItemTranscript" />

        <TextView
            android:id="@+id/comicItemExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginRight="4dp"
            android:text="@string/default_comic_explanation"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/comicItemGlobe"
            app:layout_constraintTop_toBottomOf="@+id/comicItemImage" />

        <ImageView
            android:id="@+id/comicItemGlobe"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/globe_icon_alt"
            android:src="@drawable/ic_globe"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comicItemImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>