<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/background_secondary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_app_title"
        android:textStyle="italic"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toStartOf="@+id/toolbarMain"
        app:layout_constraintTop_toTopOf="@+id/toolbarMain"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarMain"/>

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/search_placeholder_text"
        android:inputType="number"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintTop_toTopOf="@+id/toolbarMain"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarMain" />

    <ImageView
        android:id="@+id/searchButton"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/toolbarMain"
        app:layout_constraintTop_toTopOf="@+id/toolbarMain"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarMain"
        android:contentDescription="@string/search_icon_alt" />

    <ImageView
        android:id="@+id/openSearchButton"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/toolbarMain"
        app:layout_constraintTop_toTopOf="@+id/toolbarMain"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarMain"
        android:contentDescription="@string/search_icon_alt" />

    <TextView
        android:id="@+id/comicsLoadedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comics_loaded"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/comicsLoadedText"
        app:layout_constraintBottom_toTopOf="@id/prevPageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/prevPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_secondary"
        android:text="@string/previous_page_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextPageButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_page_button"
        android:backgroundTint="@color/background_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/prevPageButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>